# FixedTarget

Histograms/: Makefile  histograms.bash  histograms.cc  includes.hh  run.bash
Stage1_Pythia/: Makefile  calculate_cross_section.C  hardccbar.bash  hardccbar.cc  hardccbar.cmnd  hardccbar1.cc  hardccbar1.cmnd  hardccbar2.cc  hardccbar2.cmnd  run.bash
Stage2_TargetCrystal/: CMakeLists.txt  channeling.cc
Stage2_TargetCrystal/include/: ExExChEventAction.hh  ExExChPrimaryGeneratorAction.hh  ExExChRunAction.hh  ExExChSteppingAction.hh  constants.hh
Stage2_TargetCrystal/mac/: run.mac  vis.mac
Stage2_TargetCrystal/src/: ExExChDetectorConstruction.cc  ExExChEventAction.cc  ExExChPrimaryGeneratorAction.cc  ExExChRunAction.cc  ExExChSensitiveDetector.cc  ExExChSteppingAction.cc  ExExChUserActionInitialization.cc
Stage3_Accelerator/: Makefile  accelerator.bash  accelerator.cc  plot.C  run.bash
Stage3_Accelerator/src/: AnaClass.C  Constants.h  DecayClass.C  DecayClass.h  MagClass.C  MagClass.h
Stage4_MadX/: .~lock.SPS-UA9.Q26_201803.tfs#  OUTPUT_SECTOR.data  SPS-UA9.Q26_2018.tfs  echo.prt  madx.ps  run.madx  sps_md_beam_optics.C  trackone
Stage4_MadX/output/: OUTPUT_SECTOR.data  Twiss_SPS_UA9.dat.root  echo.prt
Stage4_MadX/src/: SPS_Q20.str  UA9_elements.ele  long_slot  short_slot  totem_beam_270GeV.beamx
